[improviment] Updating a password now causes the app state back to view.

--- a/resources/css/password.css
+++ b/resources/css/password.css
@@ -20,7 +20,6 @@
     text-align: center;
 }
 .table-container > div, .table-container > input { 
-    border: 1px solid #ccc;
     text-align: center;
 }
 
@@ -44,6 +43,13 @@
 
 .password-data {
     background-color: white;
+}
+
+.password-view {
+    border: 1px solid #ccc;
+}
+.password-edit {
+    border: 1px solid orange;
 }
 
 .actions {
