[feature] Created different types of notifications for showing errors, showing text and for confirm actions.

--- a/resources/css/notification.css
+++ b/resources/css/notification.css
@@ -17,6 +17,20 @@
 
 }
 
+.content > .btn-confirm, .content > .btn-cancel {
+    width: 25%;
+    height: 25px;
+    background-color: #f4f4f4;
+    margin: 5px;
+}
+
+.btn-confirm:hover {
+    background-color: #e5e5e5;
+}
+.btn-cancel:hover {
+    background-color: #e5e5e5;
+}
+
 .warning {
     width: 30px;
     height: auto;
