--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -16,6 +16,11 @@ html, body {
     align-items: center;
     justify-content: space-around;
 }
+.flex-row-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
 
 .main-container {
     width: 50%;
