[feature] Responsive design for mobile

--- a/resources/css/password.css
+++ b/resources/css/password.css
@@ -71,3 +71,18 @@ input {
     white-space: nowrap;
     text-overflow: ellipsis;
 }
+
+@media (max-width: 800px)  {
+    .image {
+        width: 0px;
+    }
+    .table-container {
+        grid-template-columns: 1fr;
+    }
+    .table-header, input.password-data {
+        height: 40px;
+    }
+    html {
+        height: auto;
+    }
+}
