--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -8,6 +8,7 @@ html, body {
     padding: 0;
     font-family: Poppins, Arial;
     background-color: #f5f5f7;
+    text-align: center;
 }
 
 .flex-container {
@@ -55,4 +56,16 @@ form > div {
     -webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
     box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+}
+
+@media (max-width: 800px) {
+    .main-container, form, .btn-send, input {
+        width: 80%;
+    }
+    form > div {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
 }
