--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -52,6 +52,10 @@ form > div {
     background-color: #e5e5e5;
 }
 
+.error-text {
+    color: red;
+}
+
 .shadow {
     -webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
