[feature] New feature to generate a text backup file

--- a/resources/css/password.css
+++ b/resources/css/password.css
@@ -72,6 +72,12 @@ input {
     text-overflow: ellipsis;
 }
 
+#backup {
+    position: absolute;
+    right: 0;
+    bottom: 0
+}
+
 @media (max-width: 800px)  {
     .image {
         width: 0px;
