--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -45,11 +45,12 @@ form > div {
     width: 40px;
     height: auto;
     display: block;
-    background-color: #f4f4f4;
-
+    background: linear-gradient(to bottom, #f5f5f7, #f4f4f4);
+    border-radius: 8px;
+    transition: transform 0.2s ease;
 }
 .image:hover {
-    background-color: #e5e5e5;
+    transform: scale(1.03);
 }
 
 .error-text {
@@ -57,9 +58,9 @@ form > div {
 }
 
 .shadow {
-    -webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
-    -moz-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
-    box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+    -webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.3);
+    -moz-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.3);
+    box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.3);
 }
 
 @media (max-width: 800px) {
