--- a/resources/css/password.css
+++ b/resources/css/password.css
@@ -18,6 +18,7 @@
     width: auto;
     border: 1px solid #ccc;
     text-align: center;
+    border-radius: 8px;
 }
 .table-container > div, .table-container > input { 
     text-align: center;
@@ -73,17 +74,32 @@ input {
 }
 
 #backup {
-    position: absolute;
-    right: 0;
-    bottom: 0
+    width: auto;
+    height: auto;
+    background-color: white;
+    grid-column: 1/4;
+    text-align: center;
 }
 
-@media (max-width: 800px)  {
-    .image {
-        width: 0px;
+@media (max-width: 800px) or (max-height: 720px)  {
+    #backup {
+        grid-column: 1/3;
+    }
+    .btn-copy {
+        grid-column: 2/2;
     }
     .table-container {
-        grid-template-columns: 1fr;
+        grid-template-columns: 2fr;
+        align-items: center;
+    }
+    .table-header {
+        grid-column: 1/3;
+    }
+    input.password-data {
+        grid-column: 1/1;
+    }
+    .image {
+        width: 30px;
     }
     .table-header, input.password-data {
         height: 40px;
