--- a/resources/css/password.css
+++ b/resources/css/password.css
@@ -10,44 +10,32 @@
     width: 100%;
     height: 80%;
     display: grid;
-    grid-template-columns: repeat(2, 1fr) 40px;
+    grid-template-columns: repeat(2, 1fr) var(--image-size);
     gap: 10px;
 }
 
-.table-container > div {
-    width: auto;
-    border: 1px solid #ccc;
-    text-align: center;
-    border-radius: 8px;
-}
-.table-container > div, .table-container > input { 
-    text-align: center;
-}
-
-.table-container > div {
-    background-color: #f4f4f4;
-    font-weight: bold;
-}
-
-.table-container > input {
-    width: auto;
-    height: auto;
-    background-color: white;
-    text-align: left;
-}
-
-
 .table-header {
-    background-color: #f4f4f4;
+    width: auto;
+    border: 1px solid var(--border-color);
+    border-radius: var(--button-border-radius);
+    background-color:var(--table-header-color);
     font-weight: bold;
+    text-align: center;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 
 .password-data {
-    background-color: white;
+    width: auto;
+    height: auto;
+    background-color: transparent;
+    text-align: left;
+    text-align: left;
 }
 
 .password-view {
-    border: 1px solid #ccc;
+    border: 1px solid var(--border-color);
 }
 .password-edit {
     border: 1px solid orange;
@@ -55,7 +43,7 @@
 
 .actions {
     width: 100%;
-    height: 40px;
+    height: var(--image-size);
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -65,12 +53,6 @@ input {
     width: 50%;
     height: 30px;
     color: black;
-}
-
-#password, .table-header {
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
 }
 
 #backup {
@@ -99,10 +81,10 @@ input {
         grid-column: 1/1;
     }
     .image {
-        width: 30px;
+        width: calc(var(--image-size) - 10px);
     }
     .table-header, input.password-data {
-        height: 40px;
+        height: var(--image-size);
     }
     html {
         height: auto;
